<resources>
    <string name="app_name">LowLevelDetector</string>
    <string name="lld_json_loading">LOADING…</string>
    <string name="lld_json_offline">OFFLINE (%s)</string>
    <string name="lld_json_online">ONLINE (%s)</string>
    <string name="lld_json_fetch_failed">Online data fetching failed.\nUse local data instead.\n\n%s</string>
    <string name="lld_json_save_failed">Data saving failed.\nPlease check your storage.\n\n%s</string>
    <string name="lld_json_parse_failed">Data parsing failed.\nPlease try to upgrade this app.\n\n%s</string>
    <string name="lld_json_detect_failed">Detecting failed.\nPlease try to upgrade this app.\n\n%s</string>
    <string name="title_home">Home</string>
    <string name="title_others">Others</string>
    <string name="title_prop">Properties</string>
    <string name="title_settings">Settings</string>
    <string name="result_supported">Supported</string>
    <string name="result_not_supported">Not supported</string>
    <string name="result_unidentified">Unidentified</string>
    <string name="result_enabled">Enabled</string>
    <string name="result_disabled">Disabled</string>
    <string name="android_info_title">Android version</string>
    <string name="android_info">%1$s (API %2$s)</string>
    <string name="android_info_detail">Mine: %1$s\n\nLatest stable: %2$s\nLowest support: %3$s\nLatest preview: %4$s\nLatest internal: %5$s</string>
    <string name="android_build_id_title">Android build ids</string>
    <string name="android_build_id_detail">Mine: %1$s\nMy system: %2$s\nMy vendor: %3$s\nMy ODM: %4$s\n\nLatest stable: %5$s\n%6$s</string>
    <string name="android_build_id">%1$s (%2$s)</string>
    <string name="security_patch_level_title">Android security patch level</string>
    <string name="vendor_security_patch_level_title">Vendor security patch level</string>
    <string name="security_patch_level_detail">Mine: %1$s\n\nLatest stable: %2$s</string>
    <string name="performance_class_title">Performance class</string>
    <string name="performance_class_detail_api" translatable="false">API %s</string>
    <string name="linux_title">Linux kernel version</string>
    <string name="linux_version_detail">Mine: %1$s\n\nLatest support: %2$s\nMainline: %3$s</string>
    <string name="ab_seamless_update_status_title">A/B seamless update status</string>
    <string name="virtual_ab">\u0020(Virtual)</string>
    <string name="virtual_ab_retrofit">\u0020(Virtual, retrofitted)</string>
    <string name="current_using_ab_slot_result">\u0020(Current: %s)</string>
    <string name="sar_status_title">System-as-root status</string>
    <string name="sar_type_legacy">Legacy, Android 9</string>
    <string name="sar_type_2si" translatable="false">2-Stage-Init</string>
    <string name="sar_type_recovery" translatable="false">Recovery</string>
    <string name="sar_type_slash" translatable="false">/</string>
    <string name="dynamic_partitions_status_title">Dynamic partitions status</string>
    <string name="dynamic_partitions_enabled_retrofitted">\u0020(Retrofitted)</string>
    <string name="treble_status_title">Project Treble status</string>
    <string name="treble_legacy_no_fragments">\u0020(Legacy, no fragments)</string>
    <string name="treble_other">\u0020(Other)</string>
    <string name="gsi_status_title">GSI compatibility</string>
    <string name="result_compliant">Treble compliant</string>
    <string name="result_not_compliant">Not Treble compliant</string>
    <string name="dsu_status_title">Dynamic System Update(DSU) status</string>
    <string name="mainline_title">Project Mainline module version\n(Google Play system update)</string>
    <string name="mainline_detail">Mine: %1$s (%2$s)\n\nLatest: %3$s</string>
    <string name="vndk_built_in_title">Built-in Vendor NDK status</string>
    <string name="built_in_vndk_version_result">\u0020(Level: %s)</string>
    <string name="apex_status_title">APEX status</string>
    <string name="apex_legacy_flattened">\u0020(Legacy flattened)</string>
    <string name="developer_options_status_title">Developer options status</string>
    <string name="adb_debugging_status_title">ADB debugging status</string>
    <string name="adb_authentication_status_title">ADB authentication status</string>
    <string name="encryption_status_title">Encryption status</string>
    <string name="result_encrypted">Encrypted</string>
    <string name="result_encrypted_no_key_set">Encrypted but password not been set</string>
    <string name="result_not_encrypted">Not encrypted</string>
    <string name="selinux_status">SELinux status</string>
    <string name="selinux_status_enforcing_mode">Enforcing mode</string>
    <string name="selinux_status_permissive_mode">Permissive mode</string>
    <string name="toybox_built_in_title">Built-in Toybox version</string>
    <string name="toybox_built_in_detail">Mine: %1$s\n\nLatest stable: %2$s\nLowest support: %3$s\nMaster: %4$s</string>
    <string name="webview_title">WebView version</string>
    <string name="webview_detail">Latest stable: %1$s\nLatest beta: %2$s</string>
    <string name="webview_built_in_version">My built-in WebView</string>
    <string name="webview_or">%1$s or %2$s</string>
    <string name="webview_standalone">Standalone</string>
    <string name="webview_built_in_not_installed">Not installed</string>
    <string name="webview_sub_format" translatable="false">\n  %s</string>
    <string name="webview_must_be_chosen_by_user">Must be chosen by user</string>
    <string name="webview_fallback">Fallback</string>
    <string name="webview_signed">Signed</string>
    <string name="webview_ending" translatable="false">\n\n</string>
    <string name="webview_implement_version">My WebView implementation</string>
    <string name="outdated_target_version_sdk_version_apk_my_first_api_level">My factory Android API: %s\n\n</string>
    <string name="outdated_target_version_sdk_version_apk_title">Outdated targetSdkVersion system apps</string>
    <string name="outdated_target_version_sdk_version_apk_result_none">No outdated system apps</string>
    <string name="outdated_target_version_sdk_version_apk_result_format_package_first" translatable="false">%1$s (%2$s)</string>
    <string name="outdated_target_version_sdk_version_apk_result_format_target_sdk_version_first" translatable="false">(%2$s) %1$s</string>
    <string name="build_brand">Brand</string>
    <string name="build_manufacturer">Manufacturer</string>
    <string name="build_model">Model name for sales</string>
    <string name="build_device">Codename for the developer</string>
    <string name="build_product">Name of overall product</string>
    <string name="build_hardware">Hardware name</string>
    <string name="build_board">Board model</string>
    <string name="build_soc_model">SoC model</string>
    <string name="build_soc_manufacturer">SoC manufacturer</string>
    <string name="build_hardware_sku">SKU of hardware</string>
    <string name="build_vendor_sku">Vendor SKU</string>
    <string name="build_odm_hardware_sku">SKU of ODM hardware</string>
    <string name="bit_32">32bit</string>
    <string name="bit_64">64bit</string>
    <string name="binder_status">Binder bit</string>
    <string name="hw_binder_status">HW Binder bit</string>
    <string name="vnd_binder_status">VND Binder bit</string>
    <string name="current_process_bit">Current process bit</string>
    <string name="os_arch">Current process architecture</string>
    <string name="build_cpu_abi">Current process ABI</string>
    <string name="current_system_abi">Current system ABI</string>
    <string name="build_supported_32_bit_abis">Supported 32bit CPU ABIs</string>
    <string name="build_supported_64_bit_abis">Supported 64bit CPU ABIs</string>
    <string name="build_user">ROM builder</string>
    <string name="build_host">ROM build machine name</string>
    <string name="build_time">ROM build time</string>
    <string name="build_base_os">ROM based on (Secondary development)</string>
    <string name="build_certain_fingerprint">%s fingerprint</string>
    <string name="build_stock_fingerprint">Stock ROM fingerprint</string>
    <string name="build_stock_preview_fingerprint">Stock ROM preview fingerprint</string>
    <string name="build_id">ROM build ID</string>
    <string name="build_display">ROM build ID for user</string>
    <string name="build_type">ROM build type</string>
    <string name="build_tags">ROM build tags</string>
    <string name="build_incremental">Git commit hash</string>
    <string name="build_codename">Git branch codename (REL: stable release version)</string>
    <string name="build_preview_sdk_int">Developer preview revision of pre-release SDK</string>
    <string name="webview_user_agent">WebView User-Agent</string>
    <string name="linux">Linux kernel</string>
    <string name="build_bootloader">Bootloader version</string>
    <string name="build_radio">Baseband version</string>
    <string name="build_not_filled">**NOT FILLED**</string>
    <string name="interface_title">Interface</string>
    <string name="interface_scroll_bar_key" translatable="false">interface_scroll_bar_key</string>
    <string name="interface_scroll_bar_title">Scroll bar mode</string>
    <string name="interface_scroll_bar_summary">Click to show the scroll bar mode</string>
    <string name="interface_no_scroll_bar_key">None</string>
    <string name="interface_no_scroll_bar_value" translatable="false">0</string>
    <string name="interface_normal_scroll_bar_key">Normal</string>
    <string name="interface_normal_scroll_bar_value" translatable="false">1</string>
    <string name="interface_fast_scroll_bar_value" translatable="false">2</string>
    <string name="interface_themes_key" translatable="false">interface_themes_key</string>
    <string name="interface_themes_title">Themes</string>
    <string name="interface_themes_summary">Click to show the theme chooser</string>
    <string name="interface_themes_follow_system_key">Follow system</string>
    <string name="interface_themes_follow_system_value" translatable="false">-1</string>
    <string name="interface_themes_power_saver_key">Follow power saver</string>
    <string name="interface_themes_power_saver_value" translatable="false">1</string>
    <string name="interface_themes_always_light_key">Always light</string>
    <string name="interface_themes_always_light_value" translatable="false">2</string>
    <string name="interface_themes_always_dark_key">Always dark</string>
    <string name="interface_themes_always_dark_value" translatable="false">3</string>
    <string name="function_title">Function</string>
    <string name="function_allow_network_data_key" translatable="false">about_allow_network_data_key</string>
    <string name="function_allow_network_data_title">Allow network data</string>
    <string name="function_allow_network_data_summary">When enabled, data will be prior fetched from remote network server, then be cached on the local storage.</string>
    <string name="function_outdated_target_order_by_package_name_first_key" translatable="false">function_outdated_target_order_by_package_name_key</string>
    <string name="function_outdated_target_order_by_package_name_first_title">Order by package name first</string>
    <string name="about_title">About</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source_summary">GitHub address of the app source code</string>
    <string name="about_licenses_title">License</string>
    <string name="about_licenses_summary">Referenced open-source repositories</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_summary">Version: %1$s (Iteration times: %2$d)\nBuilt-in data version: %3$s\nDistributor: %4$s\nInstaller: %5$s\nFirst install: %6$s\nLast update: %7$s</string>
</resources>